--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
    <div class="hero" id="join-button">
     <p><strong>Transforming Ideas into  Reality</strong></p>
     <p>Welcome to a <strong><em>world</em></strong> where <i>Art</i>,<i>design</i> , and <i>technology</i> blend seamlessly. Join our <b>creative journey</b> and explore the <u>endless</u> possibilities of innovation.</p>
-    <a href="registerform.html" class="join-button">Become a Member</a>
+    <a href="register.html" class="join-button">Become a Member</a>
 </div>
 
     <hr>
