--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
             <img src="image2.webp" class="d-block w-100" alt="Image 2">
         </div>
         <div class="carousel-item">
-            <img src="image3.webp" class="d-block w-100" alt="Image 3">
+            <img src="Image3.webp" class="d-block w-100" alt="Image 3">
         </div>
         <div class="carousel-item">
-            <img src="image4.webp" class="d-block w-100" alt="Image 4">
+            <img src="Image4.webp" class="d-block w-100" alt="Image 4">
         </div>
     </div>
     <!-- Previous Button -->
